fix: remove dark mode and set it as wip

--- a/packages/editor/styles/tiptap.css
+++ b/packages/editor/styles/tiptap.css
@@ -1,4 +1,4 @@
-.ProseMirror p.is-editor-empty:first-child::before {
+.ProseMirror .is-editor-empty:first-child::before {
   content: attr(data-placeholder);
   float: left;
   color: #adb5bd;
@@ -6,7 +6,7 @@
   height: 0;
 }
 
-.ProseMirror p.is-empty::before {
+.ProseMirror .is-empty::before {
   content: attr(data-placeholder);
   float: left;
   color: #adb5bd;
